--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>   
+<html>
 <head>
     <title> Wagwan </title>
 </head>
 <body>
     <h3 align="center"> WAGWAN </p>
 </body>
+</html>
