--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title> Wagwan </title>
 </head>
 <body>
-    <h3 align="center"> WAGWAN </p>
+    <h3 align="center"> WAGWAN LINA </p>
 </body>
 </html>
