--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>   
-<html>
-<head>
-    <title> Wagwan </title>
-</head>
-<body>
-    <h3 align="center"> WAGWAN LINA </p>
-</body>
-</html>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://example.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://github.com/GNRain">
+<link rel="canonical" href="https://github.com/GNRain">
